--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <button onclick="alertSomething()">Click me</button>
-    <details>
+    <details style="background-color: blue;margin: auto; width: 40%;">
       <summary>List of products</summary>
       <h2>Java</h2>
       <h2>Python</h2>
